# Transoprtation_theory

./: .gitignore  CMakeLists.txt  IndexPair.cpp  IndexPair.h  IndexSet.h  MatrixInt.cpp  MatrixInt.h  README.md  Transoprtation theory.sln  Transoprtation theory.vcxproj  Transoprtation theory.vcxproj.filters  TransportationTheorySolver.cpp  TransportationTheorySolver.h  VecInt.cpp  VecInt.h  main.cpp
src/: IndexPair.cpp  IndexPair.h  IndexSet.cpp  IndexSet.h  MatrixInt.cpp  TransportationTheorySolver.cpp  TransportationTheorySolver.h  VecInt.cpp  VecInt.h  main.cpp
tasks/: transp_mC.txt  transp_mC_multi.txt  transp_vA.txt  transp_vA_multi.txt  transp_vB.txt  transp_vB_multi.txt
